sandbox/output
MedicineClashTest.java:34: error: cannot find symbol
        assertEquals(expectedClashedSet, MedicineClash.Of(customers));
                                                      ^
  symbol:   method Of(Set<Customer>)
  location: class MedicineClash
1 error
